--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URL=YOUR_MONGODB_URL
+MONGODB_URL=mongodb+srv://ganaaeenee02:Password@cluster0.mxsxm.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
