--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@apollo/utils.keyvaluecache": "^3.1.0",
     "@types/graphql-upload": "^16.0.7",
     "apollo-server-cloud-functions": "^3.13.0",
+    "bcrypt": "^5.1.1",
     "cloudinary": "^2.4.0",
     "graphql": "^16.9.0",
     "graphql-tag": "^2.12.6",
@@ -34,6 +35,7 @@
     "@graphql-codegen/typescript-operations": "4.0.1",
     "@graphql-codegen/typescript-react-apollo": "4.1.0",
     "@graphql-codegen/typescript-resolvers": "2.7.10",
+    "@types/bcrypt": "^5.0.2",
     "@types/jest": "^28.1.6",
     "@types/mocha": "^10.0.7",
     "@types/node": "^20",
