login and register pages

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 MONGODB_URL=mongodb+srv://ganaaeenee02:Password@cluster0.mxsxm.mongodb.net/todo?retryWrites=true&w=majority
+JWT_SECRET=7f8c9d2a1b3e4f5g6h7i8j9k0l1m2n3o4p5q6r7s8t9u0v1w2x3y4z5
+
