--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "graphql-tools": "^9.0.1",
     "graphql-upload": "^16.0.2",
     "jsdom": "^24.1.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.4",
     "next": "14.0.4",
     "next-cloudinary": "^6.13.0",
@@ -38,6 +39,7 @@
     "@graphql-codegen/typescript-resolvers": "2.7.10",
     "@types/bcrypt": "^5.0.2",
     "@types/jest": "^28.1.6",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/mocha": "^10.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
