--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 MONGODB_URL=mongodb+srv://ganaaeenee02:Password@cluster0.mxsxm.mongodb.net/todo?retryWrites=true&w=majority
+MONGODB_URL_TEST=mongodb+srv://ganaaeenee02:Password@cluster0.mxsxm.mongodb.net/test?retryWrites=true&w=majority
 ACCESS_TOKEN_SECRET = jMbJNRDrodKvS1-kg5ncsdK_ro3paR1RUF4xaDpXCFQ
 REFRESH_TOKEN_SECRET = 9MCDEpNMkslWmxNJCL9EZrGvPBDVPdLknKEYT1RzOqQ
 
